--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Flipbook with Turn.js</title>
+    <style>
+        #flipbook { width: 400px; height: 300px; }
+        .page { width: 400px; height: 300px; display: flex; justify-content: center; align-items: center; font-size: 24px; border: 1px solid #ccc; }
+    </style>
+</head>
+<body>
+
+    <div id="flipbook">
+        <div class="page">Cover</div>
+        <div class="page">Page 1</div>
+        <div class="page">Page 2</div>
+        <div class="page">Page 3</div>
+        <div class="page">Back Cover</div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="turn.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#flipbook").turn({
+                width: 400,
+                height: 300,
+                autoCenter: true
+            });
+        });
+    </script>
+
+</body>
+</html>
