--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Flipbook with Turn.js</title>
+    <title>Flipbook</title>
     <style>
         #flipbook { width: 400px; height: 300px; }
-        .page { width: 400px; height: 300px; display: flex; justify-content: center; align-items: center; font-size: 24px; border: 1px solid #ccc; }
+        .page { width: 100%; height: 100%; background: #fff; display: flex; justify-content: center; align-items: center; border: 1px solid #ccc; font-size: 24px; }
     </style>
 </head>
 <body>
 
-    <div id="flipbook">
-        <div class="page">Cover</div>
-        <div class="page">Page 1</div>
-        <div class="page">Page 2</div>
-        <div class="page">Page 3</div>
-        <div class="page">Back Cover</div>
-    </div>
+<div id="flipbook">
+    <div class="page">Cover</div>
+    <div class="page">Page 1</div>
+    <div class="page">Page 2</div>
+    <div class="page">Back Cover</div>
+</div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="turn.min.js"></script>
-    <script>
-        $(document).ready(function() {
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="turn.min.js"></script>
+<script> $("#flipbook").turn(); </script>
+
+</body>
+</html> 
             $("#flipbook").turn({
                 width: 400,
                 height: 300,
